fix scrollBar measure bug

--- a/dev/tabs/tabsanimation.css
+++ b/dev/tabs/tabsanimation.css
@@ -1,3 +1,6 @@
 #tabhost {
+}
+
+#tabhost[transition] {
 	transition: transform 0.25s ease-in-out;
 }
